--- a/src/teaeli/IngredientDetails.form
+++ b/src/teaeli/IngredientDetails.form
@@ -223,16 +223,8 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="itemTypeCombo">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="7">
-                <StringItem index="0" value="Herbs"/>
-                <StringItem index="1" value="Flowers"/>
-                <StringItem index="2" value="Fruits"/>
-                <StringItem index="3" value="Leaves"/>
-                <StringItem index="4" value="Other"/>
-                <StringItem index="5" value="Tea"/>
-                <StringItem index="6" value="Flavours"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new javax.swing.DefaultComboBoxModel(new String[] {&quot;Tea&quot;, &quot;Flavours&quot; , &quot;Herbs&quot;, &quot;Flowers&quot;, &quot;Fruits&quot;, &quot;Leaves&quot;, &quot;Other&quot;})" type="code"/>
             </Property>
           </Properties>
           <Events>
