--- a/src/teaeli/AddIngredient.form
+++ b/src/teaeli/AddIngredient.form
@@ -80,9 +80,9 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="itemNameTxt" max="32767" attributes="0"/>
-                              <Component id="supplierNameTxt" max="32767" attributes="0"/>
-                              <Component id="unitPriceTxt" max="32767" attributes="0"/>
+                              <Component id="txtName" max="32767" attributes="0"/>
+                              <Component id="txtSupplierName" max="32767" attributes="0"/>
+                              <Component id="txtPrice" max="32767" attributes="0"/>
                               <Component id="itemTypeCombo" min="-2" pref="200" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -102,7 +102,7 @@
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                      <Component id="itemNameTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="txtName" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -111,12 +111,12 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="supplierNameTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="txtSupplierName" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="unitPriceTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="txtPrice" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
@@ -139,7 +139,7 @@
             <Property name="text" type="java.lang.String" value="Ingredient Name"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="itemNameTxt">
+        <Component class="javax.swing.JTextField" name="txtName">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
@@ -159,7 +159,7 @@
             <Property name="text" type="java.lang.String" value="Supplier Name"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="supplierNameTxt">
+        <Component class="javax.swing.JTextField" name="txtSupplierName">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
@@ -170,7 +170,7 @@
             <Property name="text" type="java.lang.String" value="Unit Price"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="unitPriceTxt">
+        <Component class="javax.swing.JTextField" name="txtPrice">
         </Component>
         <Component class="javax.swing.JButton" name="cancelBtn">
           <Properties>
@@ -184,6 +184,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Add"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addBtnActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="itemTypeCombo">
           <Properties>
