Stock update for ingredient completed

--- a/src/teaeli/UpdateIngStock.form
+++ b/src/teaeli/UpdateIngStock.form
@@ -60,9 +60,9 @@
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="updateStockItemName" min="-2" max="-2" attributes="0"/>
                       <Component id="updateStockCategoryName" min="-2" max="-2" attributes="0"/>
-                      <Component id="updateStockQtyInStockLbl" min="-2" pref="89" max="-2" attributes="0"/>
-                      <Component id="updateStockItemName1" min="-2" pref="80" max="-2" attributes="0"/>
-                      <Component id="updateStockReasonLbl" min="-2" max="-2" attributes="0"/>
+                      <Component id="updateStockQtyInStockName" min="-2" pref="89" max="-2" attributes="0"/>
+                      <Component id="updateStockChangeName" min="-2" pref="80" max="-2" attributes="0"/>
+                      <Component id="updateStockReasonName" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -124,12 +124,12 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="stockQtyLbl" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="updateStockQtyInStockLbl" alignment="3" max="32767" attributes="0"/>
+                      <Component id="updateStockQtyInStockName" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="newQtyTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="updateStockItemName1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="updateStockChangeName" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -140,7 +140,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
-                      <Component id="updateStockReasonLbl" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="updateStockReasonName" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -153,7 +153,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="updateStockReasonLbl">
+        <Component class="javax.swing.JLabel" name="updateStockReasonName">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
@@ -162,7 +162,7 @@
             <Property name="text" type="java.lang.String" value="Reason to Change"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="updateStockQtyInStockLbl">
+        <Component class="javax.swing.JLabel" name="updateStockQtyInStockName">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
@@ -247,7 +247,7 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JLabel" name="updateStockItemName1">
+        <Component class="javax.swing.JLabel" name="updateStockChangeName">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
